--- a/style.css
+++ b/style.css
@@ -3,16 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 :root {
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5);
-  --surface-color: rgba(255, 255, 255, 0.1);
-  --surface-color-hover: rgba(255, 255, 255, 0.05);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(/assets/moon-stars.svg);
+  --switch-bg-url: url(./assets/moon-stars.svg);
   --border-color-img: rgb(189, 209, 107);
 }
+
 .light {
   --text-color: black;
   --bg-url: url(./assets/bg-mobile-light.jpg);
@@ -25,68 +27,76 @@
 }
 
 body {
-  /*
-  background-image: url(./assets/bg-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  */
-  /*background: color image repeat position/size */
   background: var(--bg-url) no-repeat top center/cover;
-  top: 0%;
+  height: 100vh;
 }
+
 body * {
   font-family: 'Inter', sans-serif;
   color: var(--text-color);
 }
+
 #container {
-  width: 360px;
-  margin: 32px auto 0px;
-  padding: 0 20px;
+  width: 100%;
+  max-width: 588px;
+  margin: 56px auto 0px;
+  padding: 0 24px;
 }
-/*profile*/
+
+/* profile */
 #profile {
   text-align: center;
-  padding: 20px;
+  padding: 24px;
 }
+
 #profile img {
   width: 115px;
   border: 2px solid var(--border-color-img);
   border-radius: 50%;
 }
+
 #profile p {
   font-weight: 500;
-  line-height: 20px;
+  line-height: 24px;
   margin-top: 8px;
 }
+
+/* switch */
 #switch {
   position: relative;
   width: 64px;
   margin: 4px auto;
 }
-/*switch*/
+
 #switch button {
   width: 32px;
   height: 32px;
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
+
   position: absolute;
-  z-index: 1;
-  left: 0;
   top: 50%;
+  left: 0;
+  z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.2s;
 }
+
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
 }
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
+}
+
 #switch span {
   display: block;
   width: 64px;
-  height: 30px;
-  border: 1px solid var(--stroke-color);
+  height: 24px;
   background: var(--surface-color);
+  border: 1px solid var(--stroke-color);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
@@ -96,18 +106,25 @@ body * {
   text-align: center;
   font-size: 18xpx;
 }
+
+/* links */
 ul {
   list-style: none;
+
   display: flex;
   flex-direction: column;
-  gap: 12px;
-  padding: 20px 0;
+  gap: 16px;
+
+  padding: 24px 0;
 }
+
 ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 12px 20px;
+
+  padding: 16px 24px;
+
   background: var(--surface-color);
   border: 1px solid var(--stroke-color);
   border-radius: 8px;
@@ -117,28 +134,32 @@ ul li a {
 
   text-decoration: none;
   font-weight: 500;
+
   transition: background 0.2s;
 }
 
+/* pseudo-selector */
 ul li a:hover {
-  background-color: var(--surface-color-hover);
+  background: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
 
+/* social links */
 #social-links {
   display: flex;
-  gap: 12px;
-
-  padding: 20px 0;
-  font-size: 20px;
   justify-content: center;
+
+  padding: 24px 0;
+
+  font-size: 24px;
 }
 
 #social-links a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 12px;
+  padding: 16px;
+
   transition: background 0.2s;
   border-radius: 50%;
 }
@@ -150,4 +171,35 @@ ul li a:hover {
 footer {
   padding: 24px 0;
   text-align: center;
+  font-size: 14px;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
